--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sem.css">
+    <title>Nom de l'Université</title>
+</head>
+<body>
+ <div class="image">
+    <img src="R.jpeg" alt="Image">
+    <div class="text">
+        <p class="parag">Faculté </p><p class="paragraph">des sciences à Rabat</b></p> </div>
+        
+</div>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="file:///C:/Users/ichen/Desktop/mon%20travail/fin%20de%20semtre.html#accueil">Accueil</a></li>
+                <li><a href="http://www.fsr.ac.ma/page/missions">Recherche</a></li>
+                <li><a href="http://www.fsr.ac.ma/cours/">Cours en ligne </a></li>
+                <li><a href="http://www.fsr.ac.ma/content/cooperation-nationale#overlay-context=gallery">Cooperation</a></li>
+                <li><a href="http://www.fsr.ac.ma/contact">Contact</a></li>
+            </ul>
+        </nav>  
+    </header>
+
+   <div class="prof">
+   </div>
+   <div class="proftext">
+    <h1><a href="http://www.fsr.ac.ma/vue-espace-ens" >ESPACE ENSEIGNANTS</a></h1>
+    <p class="ppp">La Faculté des Sciences offre un espace pratique pour organiser des événements, réserver des amphithéâtres, véhicules, et matériel de recherche. Vous pouvez également anticiper les démarches administratives et obtenir des informations sur les lois et les promotions de grade.</p> </div>
+
+   <div class="formation"></div>
+
+   <div class="p">
+    <h1><a href="http://www.fsr.ac.ma/content/formations-0">FORMATION</a></h1>
+    <p class="pppp">La Faculté des Sciences de Rabat offre un catalogue complet de formations comprenant des programmes de licence, ainsi que des masters recherche et spécialisés. Chaque programme y est présenté en détail.</p>
+   </div>
+
+   <div class="etudiant"></div>
+
+   <div class="proftext13">
+    <h1><a href="http://www.fsr.ac.ma/vue-espace-etd"> ESPACE Etudiants</a></h1>
+    <p class="ppppp">Au sein de cette plateforme, la Faculté des Sciences offre à ses étudiants un accès facile aux cours au format électronique, aux résultats semestriels et/ou annuels, ainsi qu'à tous les documents requis pour utiliser les divers services tels que les affaires estudiantines, la bibliothèque, et l'école doctorale, entre autres.</p>
+   </div>
+   <div class="title-container">
+    <div class="line"></div>
+    <h1 class="h1">departement</h1>
+    <div class="line"></div>
+</div>
+   <div class="ik">
+    <div class="jij">
+        <div class="jij-text"><a href="http://www.fsr.ac.ma/sponsor/d%C3%A9partement-informatique">departement d'informatique</a></div>
+    </div>
+    <div class="jullie">
+        <div class="jullie-text"><a href="http://www.fsr.ac.ma/sponsor/d%C3%A9partement-de-math%C3%A9matiques">departement de mathematiques</a></div>
+    </div>
+    <div class="we">
+        <div class="we-text"><a href="http://www.fsr.ac.ma/sponsor/d%C3%A9partement-physique">departement de physique</a></div>
+    </div>
+    <div class="hit">
+        <div class="hit-text" ><a href="http://www.fsr.ac.ma/sponsor/d%C3%A9partement-biologie">departement de biologie</a></div>
+    </div>
+</div> 
+<div class="line2"></div>
+<footer>
+    <div class="footer-content">
+        <div class="footer-info">
+            <h3>Coordonnées</h3>
+            <p>Adresse: 4 Avenue Ibn Battouta
+                B.P. 1014 RP, Rabat</p>
+            <p>Email: <a href="mailto:decanat@fsr.ac.ma">decanat@fsr.ac.ma</a></p>
+            <p>Téléphone: <a href="tel:+ 212 (0) 5 37 77 42 61">+ 212 (0) 5 37 77 42 61</a></p>
+        </div>
+        <div class="footer-links">
+            <h3>Liens utiles</h3>
+            <ul>
+                <li><a href="https://fm6education.ma/portal/">Université Med V de Rabat</a></li>
+                <li><a href="https://www.enssup.gov.ma/fr">Ministère E.S.R.S.F.C</a></li>
+                <li><a href="https://www.cnrst.ma/fr/">CNRST</a></li>
+                <li><a href="https://fm6education.ma/portal/">La Fondation Mohammed VI</a></li>
+                <li><a href="http://www.mgen.ma/">M.G.E.N</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 faculté des sciences à Rabat. Tous droits réservés.</p>
+    </div>
+</footer>
+
+   
+    
+
+</body>
+</html>
 
